# vertical-slice-rust

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  api.rest
entity/: Cargo.toml
entity/src/: lib.rs  mod.rs  prelude.rs  role.rs  user.rs
migration/: Cargo.toml
migration/src/: lib.rs
migration/src/postgresql/: m20220717_123000_create_roles_table.rs  m20220717_123700_create_users_table.rs  mod.rs
migrations/2022-03-02-204413_create_client/: down.sql  up.sql
migrations/2022-03-02-204421_create_account/: up.sql
src/: lib.rs  main.rs  routes.rs  schema.rs
src/application/auth/query/: auth_login_query.rs  auth_login_query_validations.rs  mod.rs  refresh_token_query.rs
src/application/clients/commands/: create_client_command.rs  mod.rs
src/application/clients/queries/: mod.rs
src/application/user/commands/: create_user_command.rs  mod.rs
src/application/user/queries/: get_user_query.rs  mod.rs
src/core/: base_handler.rs  mod.rs  query_error.rs
src/domain/: mod.rs
src/domain/clients/: client.rs
src/domain/role/: mod.rs  role.rs  tests.rs
src/domain/user/: mod.rs  tests.rs  user.rs
src/domain/value_objects/: email.rs  hashed_password.rs  mod.rs  role.rs
src/domain/value_objects/tests/: email_tests.rs  hashed_password_tests.rs  mod.rs
src/infrastructure/: application_error_response.rs  mod.rs
src/infrastructure/data/: db_manager.rs  mod.rs
src/infrastructure/middleware/: authentication_middleware.rs  mod.rs  security_headers_middleware.rs
src/infrastructure/persistence/: database_context.rs  database_manager.rs  mod.rs
src/infrastructure/rest/: application_error_response.rs  base_query_handler.rs  mod.rs  request_validation.rs
src/infrastructure/security/: mod.rs  user_claims.rs
src/infrastructure/security/jwt/: jwt_errors.rs  jwt_helper.rs  mod.rs  refresh_token_claims.rs
src/presentation/rest/: default_response.rs  mod.rs
src/presentation/rest/auth/: auth_controller.rs  mod.rs  refresh_controller.rs  validate_controller.rs
src/presentation/rest/clients/: create_client_controller.rs  get_client_controller.rs  mod.rs
src/presentation/rest/user/: create_user_controller.rs  get_user_controller.rs  mod.rs
tests/: main.rs  mod.rs
tests/fixtures/: mod.rs  roles_fixtures.rs  users_fixtures.rs
tests/integration_tests/: common.rs  fixtures.rs  mod.rs
tests/integration_tests/application/auth/: auth_login_query_test.rs  mod.rs  refresh_token_query_test.rs
tests/unit_tests/: mod.rs
tests/unit_tests/domain/clients/: mod.rs  (+1 more)
(+21 files in other folders)
