[package]
name = "vsa-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "3"
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["postgres", "r2d2", "uuidv07"] }
cqrs-es = "0.2.0"
async-trait = "0.1.51"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
